// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense Summary Component should render properly with multiple expenses 1`] = `
<styled.div>
  <h1>
    Viewing 2 expenses totalling 
    <span>
      $0.20
    </span>
  </h1>
</styled.div>
`;

exports[`Expense Summary Component should render properly with no expenses 1`] = `
<styled.div>
  <h1>
    Viewing 0 expenses totalling 
    <span>
      $0.00
    </span>
  </h1>
</styled.div>
`;

exports[`Expense Summary Component should render properly with one expense 1`] = `
<styled.div>
  <h1>
    Viewing 1 expense totalling 
    <span>
      $0.10
    </span>
  </h1>
</styled.div>
`;
